2002-11-26  Matthias Clasen  <maclas@gmx.de>

	* glib/gmessages.h: Only use G_LIKELY in g_assert() and 
	g_return_[val]_if_fail() if it is actually doing something.

2002-11-26  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/grand.c, gthread/gthread-impl.c, tests/rand-test.c: 
	Changed the seeding algorithm. Old behaviour can be achived by
	setting envvar G_RANDOM_VERSION to "2.0". (#99262)

	* docs/reference/glib/glib-docs.sgml,
	docs/reference/glib/Makefile.am: Renamed
	docs/reference/glib/changes-2.0.sgml to
	docs/reference/glib/changes.sgml and added section for changes
	from 2.0 to 2.2 (Also corrected 1.0 to 1.2).

	* README.in, docs/reference/glib/running.sgml,
	docs/reference/glib/tmpl/random_numbers.sgml,
	docs/reference/glib/changes.sgml: Added notes about the new
	seeding algorithm.

	* configure.in: Make CPPFLAGS, not CFLAGS, include
	G_THREAD_CFLAGS. CFLAGS is used while linking too and thus GLib
	programs would link to the threads library on some platforms. Also
	fixed a bug manifesting through this change. (#77981)

2002-11-26  Matthias Clasen  <maclas@gmx.de>

	* glib/gmacros.h: Fix the non-gcc-3.x definitions of G_LIKELY 
	and G_UNLIKELY.  (Reported by Dan Mills)

2002-11-25  Matthias Clasen  <maclas@gmx.de>

	* glib/gfileutils.c (g_build_path): 
	(g_build_filename): Document that the varargs must be 
	NULL-terminated. (#99510)

	* glib/gmessages.h (g_assert): 
	(g_return_if_fail): 
	(g_return_val_if_fail): Remove the (no longer effective) empty
	if-branch.

	* glib/gmacros.h: Change the definition of G_LIKELY, so that
	g_return_if_fail() and friends still trigger a gcc warning if
	the expr is an assignment. 

2002-11-23  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Generate docs/reference/*/version.xml.

	* glib/gdir.h: Add Copyright notice.

2002-11-22  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Fixed typo: PTHREAD_PRIO_MIN ->
	PTHREAD_PRIO_MAX. (Laurent Vivier, #99293)
