@@ -198,11 +198,11 @@ GPrintFunc      g_set_printerr_handler  (GPrintFunc      func);
 
 #else /* !G_DISABLE_ASSERT */
 
-#if defined(__GNUC__) && (__GNUC__ > 2)  && defined(__OPTIMIZE__)
+#ifdef __GNUC__
 
 #define g_assert(expr)			G_STMT_START{		\
-     if (!G_LIKELY (expr))					\
-       g_log (G_LOG_DOMAIN,					\
+     if G_LIKELY(expr) { } else 				\
+        g_log (G_LOG_DOMAIN,					\
 	      G_LOG_LEVEL_ERROR,				\
 	      "file %s: line %d (%s): assertion failed: (%s)",	\
 	      __FILE__,						\
@@ -250,10 +250,10 @@ GPrintFunc      g_set_printerr_handler  (GPrintFunc      func);
 
 #else /* !G_DISABLE_CHECKS */
 
-#if defined(__GNUC__) && (__GNUC__ > 2) && defined(__OPTIMIZE__)
+#ifdef __GNUC__
 
 #define g_return_if_fail(expr)		G_STMT_START{			\
-     if (!G_LIKELY (expr)) 	     					\
+     if G_LIKELY(expr) { } else       					\
        {								\
 	 g_log (G_LOG_DOMAIN,						\
 		G_LOG_LEVEL_CRITICAL,					\
@@ -266,7 +266,7 @@ GPrintFunc      g_set_printerr_handler  (GPrintFunc      func);
        };				}G_STMT_END
 
 #define g_return_val_if_fail(expr,val)	G_STMT_START{			\
-     if (!G_LIKELY (expr))						\
+     if G_LIKELY(expr) { } else						\
        {								\
 	 g_log (G_LOG_DOMAIN,						\
 		G_LOG_LEVEL_CRITICAL,					\
